// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationStep should not render without exchange transaction 1`] = `<div />`;

exports[`ConfirmationStep should render 1`] = `
<div>
  <div
    class="flex flex-col space-y-8"
    data-testid="ExchangeForm__confirmation-step"
  >
    <div
      class="sm:mx-auto sm:flex sm:items-center sm:space-x-3"
    >
      <div
        class="hidden text-theme-success-600 sm:block css-1atxdzc"
        height="40"
        width="40"
      >
        <svg>
          circle-check-mark.svg
        </svg>
      </div>
      <h2
        class="m-0 text-xl font-bold sm:text-2xl"
      >
        Transaction is Complete!
      </h2>
    </div>
    <div
      class="flex flex-col space-y-5"
    >
      <div
        class="flex items-center space-x-3"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded bg-theme-primary-200 font-semibold dark:bg-theme-secondary-800"
        >
          1
        </span>
        <h3
          class="m-0 text-lg font-bold"
        >
          BTC Input
        </h3>
      </div>
      <div
        class="flex sm:space-x-6"
      >
        <div
          class="hidden h-24 w-24 shrink-0 items-center justify-center rounded-xl bg-theme-secondary-200 dark:bg-theme-secondary-700 sm:flex"
        >
          <svg
            class="w-12"
          >
            wallet.svg
          </svg>
        </div>
        <div
          class="flex flex-1 flex-col space-y-4 overflow-hidden"
        >
          <div
            class="flex flex-col space-y-2"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Input Transaction ID
            </span>
            <div
              class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
            >
              <span
                class="overflow-hidden"
                data-testid="ExplorerLink"
              >
                <a
                  class="ring-focus group inline-block css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href="https://blockchair.com/bitcoin/transaction/payinHash"
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <span
                      class="min-w-0 overflow-hidden"
                    >
                      payinHash
                    </span>
                  </span>
                  <div
                    class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                    data-testid="Link__external"
                    height="16"
                    width="16"
                  >
                    <svg>
                      arrow-external.svg
                    </svg>
                  </div>
                </a>
              </span>
              <span
                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="flex flex-col space-y-2"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Exchange  Address
            </span>
            <div
              class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
            >
              <span
                class="overflow-hidden"
                data-testid="ExplorerLink"
              >
                <a
                  class="ring-focus group inline-block css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href="https://blockchair.com/bitcoin/address/payinAddress"
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <span
                      class="min-w-0 overflow-hidden"
                    >
                      payinAddress
                    </span>
                  </span>
                  <div
                    class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                    data-testid="Link__external"
                    height="16"
                    width="16"
                  >
                    <svg>
                      arrow-external.svg
                    </svg>
                  </div>
                </a>
              </span>
              <span
                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="flex flex-col space-y-2"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Amount Sent
            </span>
            <div
              class="mr-auto whitespace-nowrap css-fbeerz"
              color="danger"
            >
              <span
                class="whitespace-nowrap text-lg font-semibold"
                data-testid="Amount"
              >
                - 1 BTC
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="-mx-10 border-t border-dashed border-theme-secondary-300 px-10 dark:border-theme-secondary-800"
    />
    <div
      class="flex flex-col space-y-5"
    >
      <div
        class="flex items-center space-x-3"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded bg-theme-primary-200 font-semibold dark:bg-theme-secondary-800"
        >
          2
        </span>
        <h3
          class="m-0 text-lg font-bold"
        >
           Output
        </h3>
      </div>
      <div
        class="flex sm:space-x-6"
      >
        <div
          class="hidden h-24 w-24 shrink-0 items-center justify-center rounded-xl bg-theme-secondary-200 dark:bg-theme-secondary-700 sm:flex"
        >
          <svg
            class="w-12"
          >
            exchange.svg
          </svg>
        </div>
        <div
          class="flex flex-1 flex-col space-y-4 overflow-hidden"
        >
          <div
            class="flex w-full flex-col space-y-2"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Output Transaction ID
            </span>
            <span
              class="text-lg font-semibold"
            >
              N/A
            </span>
          </div>
          <div
            class="flex flex-col space-y-2"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Your  Address
            </span>
            <div
              class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
            >
              <span
                class="min-w-0 overflow-hidden"
              >
                payoutAddress
              </span>
              <span
                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="flex flex-col space-y-2"
          >
            <span
              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Amount Received
            </span>
            <div
              class="mr-auto whitespace-nowrap css-1vb1527"
              color="success"
            >
              <span
                class="whitespace-nowrap text-lg font-semibold"
                data-testid="Amount"
              >
                + 100 ARK
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExchangeForm should render exchange form 1`] = `
<div>
  <form
    class="space-y-5"
    data-testid="ExchangeForm"
  >
    <div>
      <div
        class="flex flex-col"
      >
        <span
          class="css-3qwsx5"
        />
        <ul
          class="css-xa5o6q"
        >
          <li
            class="css-47028"
          />
          <li
            class="css-3ldhk3"
          />
          <li
            class="css-3ldhk3"
          />
          <li
            class="css-3ldhk3"
          />
        </ul>
      </div>
      <div
        class="mt-8"
      >
        <div
          data-testid="tab-pabel__active-panel"
        >
          <div
            class="flex flex-col"
            data-testid="ExchangeForm__form-step"
          >
            <div
              class="flex space-x-3"
            >
              <div
                class="w-2/5"
              >
                <fieldset
                  class="flex flex-col css-1bcidjh"
                >
                  <label
                    class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                    data-testid="FormLabel"
                    for="fromCurrency"
                  >
                    Cryptoasset
                  </label>
                  <div
                    class="relative w-full"
                    data-testid="SelectDropdown"
                  >
                    <div
                      class="sr-only css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="select-list__input"
                          name="fromCurrency"
                          readonly=""
                          tabindex="-1"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="w-full"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="fromCurrency-menu"
                        role="combobox"
                      >
                        <div>
                          <label
                            for="fromCurrency-input"
                            id="fromCurrency-label"
                          />
                          <div
                            class="css-1psxlcd"
                          >
                            <span
                              class="hidden sm:inline"
                            >
                              <div
                                class="border-theme-secondary-200 bg-theme-secondary-200 ring-theme-background dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-459u9r"
                              />
                            </span>
                            <div
                              class="relative flex h-full flex-1"
                            >
                              <input
                                aria-autocomplete="list"
                                aria-controls="fromCurrency-menu"
                                aria-labelledby="fromCurrency-label"
                                autocomplete="off"
                                class="no-ligatures w-full border-none cursor-default css-1nupw50"
                                data-testid="SelectDropdown__input"
                                id="fromCurrency-input"
                                name="fromCurrency"
                                placeholder="Select"
                                type="text"
                                value=""
                              />
                            </div>
                            <div
                              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                              data-testid="Input__addon-end"
                            >
                              <div
                                class=""
                              >
                                <div
                                  class="flex items-center"
                                >
                                  <div
                                    class="flex items-center justify-center py-2 px-1"
                                    data-testid="SelectDropdown__caret"
                                  >
                                    <div
                                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                                      height="10"
                                      width="10"
                                    >
                                      <svg>
                                        caret-down.svg
                                      </svg>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          aria-labelledby="fromCurrency-label"
                          id="fromCurrency-menu"
                          role="listbox"
                        />
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                class="w-3/5"
              >
                <fieldset
                  class="flex flex-col css-1bcidjh"
                >
                  <label
                    class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                    data-testid="FormLabel"
                    for="payinAmount"
                  >
                    You Send
                  </label>
                  <div
                    class="relative"
                  >
                    <div
                      class="css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="InputCurrency"
                          name="payinAmount"
                          placeholder="Enter an amount"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
            <div
              class="flex space-x-4 sm:ml-8 sm:space-x-8"
            >
              <div
                class="relative my-1 h-20 border-l border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                <div
                  class="absolute top-1/2 h-2 w-2 -translate-x-1/2 -translate-y-1/2 rounded-full border border-theme-secondary-300 bg-theme-background dark:border-theme-secondary-800"
                />
              </div>
              <div
                class="flex flex-1 items-center"
              >
                <div
                  class="flex flex-col space-y-2 text-sm sm:flex-row sm:items-center sm:space-x-2 sm:space-y-0"
                >
                  <span
                    class="mt-px border-b border-dashed border-theme-primary-600 font-semibold text-theme-primary-600"
                  >
                    Estimated Rate
                    :
                  </span>
                  <span>
                    N/A
                  </span>
                </div>
                <button
                  class="ml-auto css-j822yf"
                  data-testid="ExchangeForm__swap-button"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-down-up.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="space-y-6"
            >
              <div
                class="flex space-x-3"
              >
                <div
                  class="w-2/5"
                >
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="toCurrency"
                    >
                      Cryptoasset
                    </label>
                    <div
                      class="relative w-full"
                      data-testid="SelectDropdown"
                    >
                      <div
                        class="sr-only css-1psxlcd"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none css-1nupw50"
                            data-testid="select-list__input"
                            name="toCurrency"
                            readonly=""
                            tabindex="-1"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="w-full"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="toCurrency-menu"
                          role="combobox"
                        >
                          <div>
                            <label
                              for="toCurrency-input"
                              id="toCurrency-label"
                            />
                            <div
                              class="css-1psxlcd"
                            >
                              <span
                                class="hidden sm:inline"
                              >
                                <div
                                  class="border-theme-secondary-200 bg-theme-secondary-200 ring-theme-background dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-459u9r"
                                />
                              </span>
                              <div
                                class="relative flex h-full flex-1"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="toCurrency-menu"
                                  aria-labelledby="toCurrency-label"
                                  autocomplete="off"
                                  class="no-ligatures w-full border-none cursor-default css-1nupw50"
                                  data-testid="SelectDropdown__input"
                                  id="toCurrency-input"
                                  name="toCurrency"
                                  placeholder="Select"
                                  type="text"
                                  value=""
                                />
                              </div>
                              <div
                                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                                data-testid="Input__addon-end"
                              >
                                <div
                                  class=""
                                >
                                  <div
                                    class="flex items-center"
                                  >
                                    <div
                                      class="flex items-center justify-center py-2 px-1"
                                      data-testid="SelectDropdown__caret"
                                    >
                                      <div
                                        class="transition-transform text-theme-secondary-500 css-15txs7d"
                                        height="10"
                                        width="10"
                                      >
                                        <svg>
                                          caret-down.svg
                                        </svg>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            aria-labelledby="toCurrency-label"
                            id="toCurrency-menu"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="w-3/5"
                >
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="payoutAmount"
                    >
                      You Get
                    </label>
                    <div
                      class="relative"
                    >
                      <div
                        class="css-1psxlcd"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none css-1nupw50"
                            data-testid="InputCurrency"
                            name="payoutAmount"
                            placeholder="Enter an amount"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
              </div>
              <div
                data-testid="ExchangeForm__recipient-address"
              >
                <fieldset
                  class="flex flex-col css-1bcidjh"
                >
                  <label
                    class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                    data-testid="FormLabel"
                    for="recipientWallet"
                  >
                    <div
                      class="flex w-full justify-between"
                    >
                      Recipient Wallet
                      <button
                        class="link text-sm font-semibold"
                        data-testid="ExchangeForm__add-refund-address"
                        type="button"
                      >
                        +
                        Add Refund Wallet
                      </button>
                    </div>
                  </label>
                  <div>
                    <div
                      class="relative flex w-full items-center text-left"
                      data-testid="SelectRecipient__wrapper"
                    >
                      <div
                        class="relative w-full"
                        data-testid="SelectDropdown"
                      >
                        <div
                          class="sr-only css-1psxlcd"
                        >
                          <div
                            class="relative flex h-full flex-1"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="no-ligatures w-full border-none css-1nupw50"
                              data-testid="select-list__input"
                              name="recipientWallet"
                              readonly=""
                              tabindex="-1"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="w-full"
                        >
                          <div
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="SelectRecipient__dropdown-menu"
                            role="combobox"
                          >
                            <div>
                              <label
                                for="SelectRecipient__dropdown-input"
                                id="SelectRecipient__dropdown-label"
                              />
                              <div
                                class="css-n29l73"
                                disabled=""
                              >
                                <div
                                  class="flex items-center"
                                >
                                  <div
                                    class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-459u9r"
                                  />
                                </div>
                                <div
                                  class="relative flex h-full flex-1"
                                >
                                  <input
                                    aria-autocomplete="list"
                                    aria-controls="SelectRecipient__dropdown-menu"
                                    aria-invalid="false"
                                    aria-labelledby="SelectRecipient__dropdown-label"
                                    autocomplete="off"
                                    class="no-ligatures w-full border-none cursor-default text-theme-secondary-text css-1nupw50"
                                    data-testid="SelectDropdown__input"
                                    disabled=""
                                    id="SelectRecipient__dropdown-input"
                                    name="recipientWallet"
                                    placeholder="Enter the payout address"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              aria-labelledby="SelectRecipient__dropdown-label"
                              id="SelectRecipient__dropdown-menu"
                              role="listbox"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1kzb86y"
        >
          <button
            class="css-1jhy6v9"
            data-testid="ExchangeForm__back-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              Back
            </div>
          </button>
          <button
            class="css-1yqe28v"
            data-testid="ExchangeForm__continue-button"
            disabled=""
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              Continue
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`ExchangeForm should render exchange form with id of finished order 1`] = `
<div>
  <form
    class="space-y-5"
    data-testid="ExchangeForm"
  >
    <div>
      <div
        class="flex flex-col"
      >
        <span
          class="css-3qwsx5"
        />
        <ul
          class="css-xa5o6q"
        >
          <li
            class="css-47028"
          />
          <li
            class="css-47028"
          />
          <li
            class="css-47028"
          />
          <li
            class="css-47028"
          />
        </ul>
      </div>
      <div
        class="mt-8"
      >
        <div
          data-testid="tab-pabel__active-panel"
        >
          <div
            class="flex flex-col space-y-8"
            data-testid="ExchangeForm__confirmation-step"
          >
            <div
              class="sm:mx-auto sm:flex sm:items-center sm:space-x-3"
            >
              <div
                class="hidden text-theme-success-600 sm:block css-1atxdzc"
                height="40"
                width="40"
              >
                <svg>
                  circle-check-mark.svg
                </svg>
              </div>
              <h2
                class="m-0 text-xl font-bold sm:text-2xl"
              >
                Transaction is Complete!
              </h2>
            </div>
            <div
              class="flex flex-col space-y-5"
            >
              <div
                class="flex items-center space-x-3"
              >
                <span
                  class="flex h-6 w-6 items-center justify-center rounded bg-theme-primary-200 font-semibold dark:bg-theme-secondary-800"
                >
                  1
                </span>
                <h3
                  class="m-0 text-lg font-bold"
                >
                  BTC Input
                </h3>
              </div>
              <div
                class="flex sm:space-x-6"
              >
                <div
                  class="hidden h-24 w-24 shrink-0 items-center justify-center rounded-xl bg-theme-secondary-200 dark:bg-theme-secondary-700 sm:flex"
                >
                  <svg
                    class="w-12"
                  >
                    wallet.svg
                  </svg>
                </div>
                <div
                  class="flex flex-1 flex-col space-y-4 overflow-hidden"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <span
                      class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      Input Transaction ID
                    </span>
                    <div
                      class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
                    >
                      <span
                        class="overflow-hidden"
                        data-testid="ExplorerLink"
                      >
                        <a
                          class="ring-focus group inline-block css-15tcy38"
                          data-ring-focus-margin="-m-1"
                          data-testid="Link"
                          href="https://blockchair.com/bitcoin/transaction/payinHash?from=changenow"
                          rel="noopener noreferrer"
                        >
                          <span
                            class="css-1y2194z"
                          >
                            <span
                              class="min-w-0 overflow-hidden"
                            >
                              payinHash
                            </span>
                          </span>
                          <div
                            class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                            data-testid="Link__external"
                            height="16"
                            width="16"
                          >
                            <svg>
                              arrow-external.svg
                            </svg>
                          </div>
                        </a>
                      </span>
                      <span
                        class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <button
                          class="ring-focus relative focus:outline-none"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="css-v0ob3f"
                            height="16"
                            width="16"
                          >
                            <svg>
                              copy.svg
                            </svg>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <span
                      class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      Exchange ARK Address
                    </span>
                    <div
                      class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
                    >
                      <span
                        class="overflow-hidden"
                        data-testid="ExplorerLink"
                      >
                        <a
                          class="ring-focus group inline-block css-15tcy38"
                          data-ring-focus-margin="-m-1"
                          data-testid="Link"
                          href="https://blockchair.com/bitcoin/address/payinAddress?from=changenow"
                          rel="noopener noreferrer"
                        >
                          <span
                            class="css-1y2194z"
                          >
                            <span
                              class="min-w-0 overflow-hidden"
                            >
                              payinAddress
                            </span>
                          </span>
                          <div
                            class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                            data-testid="Link__external"
                            height="16"
                            width="16"
                          >
                            <svg>
                              arrow-external.svg
                            </svg>
                          </div>
                        </a>
                      </span>
                      <span
                        class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <button
                          class="ring-focus relative focus:outline-none"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="css-v0ob3f"
                            height="16"
                            width="16"
                          >
                            <svg>
                              copy.svg
                            </svg>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <span
                      class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      Amount Sent
                    </span>
                    <div
                      class="mr-auto whitespace-nowrap css-fbeerz"
                      color="danger"
                    >
                      <span
                        class="whitespace-nowrap text-lg font-semibold"
                        data-testid="Amount"
                      >
                        - 1 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="-mx-10 border-t border-dashed border-theme-secondary-300 px-10 dark:border-theme-secondary-800"
            />
            <div
              class="flex flex-col space-y-5"
            >
              <div
                class="flex items-center space-x-3"
              >
                <span
                  class="flex h-6 w-6 items-center justify-center rounded bg-theme-primary-200 font-semibold dark:bg-theme-secondary-800"
                >
                  2
                </span>
                <h3
                  class="m-0 text-lg font-bold"
                >
                  ARK Output
                </h3>
              </div>
              <div
                class="flex sm:space-x-6"
              >
                <div
                  class="hidden h-24 w-24 shrink-0 items-center justify-center rounded-xl bg-theme-secondary-200 dark:bg-theme-secondary-700 sm:flex"
                >
                  <svg
                    class="w-12"
                  >
                    exchange.svg
                  </svg>
                </div>
                <div
                  class="flex flex-1 flex-col space-y-4 overflow-hidden"
                >
                  <div
                    class="flex w-full flex-col space-y-2"
                  >
                    <span
                      class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      Output Transaction ID
                    </span>
                    <div
                      class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
                    >
                      <span
                        class="overflow-hidden"
                        data-testid="ExplorerLink"
                      >
                        <a
                          class="ring-focus group inline-block css-15tcy38"
                          data-ring-focus-margin="-m-1"
                          data-testid="Link"
                          href="https://explorer.ark.io/transaction/payoutHash"
                          rel="noopener noreferrer"
                        >
                          <span
                            class="css-1y2194z"
                          >
                            <span
                              class="min-w-0 overflow-hidden"
                            >
                              payoutHash
                            </span>
                          </span>
                          <div
                            class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                            data-testid="Link__external"
                            height="16"
                            width="16"
                          >
                            <svg>
                              arrow-external.svg
                            </svg>
                          </div>
                        </a>
                      </span>
                      <span
                        class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <button
                          class="ring-focus relative focus:outline-none"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="css-v0ob3f"
                            height="16"
                            width="16"
                          >
                            <svg>
                              copy.svg
                            </svg>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <span
                      class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      Your ARK Address
                    </span>
                    <div
                      class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
                    >
                      <span
                        class="overflow-hidden"
                        data-testid="ExplorerLink"
                      >
                        <a
                          class="ring-focus group inline-block css-15tcy38"
                          data-ring-focus-margin="-m-1"
                          data-testid="Link"
                          href="https://explorer.ark.io/wallets/payoutAddress"
                          rel="noopener noreferrer"
                        >
                          <span
                            class="css-1y2194z"
                          >
                            <span
                              class="min-w-0 overflow-hidden"
                            >
                              payoutAddress
                            </span>
                          </span>
                          <div
                            class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                            data-testid="Link__external"
                            height="16"
                            width="16"
                          >
                            <svg>
                              arrow-external.svg
                            </svg>
                          </div>
                        </a>
                      </span>
                      <span
                        class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <button
                          class="ring-focus relative focus:outline-none"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="css-v0ob3f"
                            height="16"
                            width="16"
                          >
                            <svg>
                              copy.svg
                            </svg>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <span
                      class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      Amount Received
                    </span>
                    <div
                      class="mr-auto whitespace-nowrap css-1vb1527"
                      color="success"
                    >
                      <span
                        class="whitespace-nowrap text-lg font-semibold"
                        data-testid="Amount"
                      >
                        + 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1kzb86y"
        >
          <button
            class="css-1bx0hyc"
            data-testid="ExchangeForm__finish-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              Go to Portfolio
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`ExchangeForm should render exchange form with id of pending order 1`] = `
<div>
  <form
    class="space-y-5"
    data-testid="ExchangeForm"
  >
    <div>
      <div
        class="flex flex-col"
      >
        <span
          class="css-3qwsx5"
        />
        <ul
          class="css-xa5o6q"
        >
          <li
            class="css-47028"
          />
          <li
            class="css-47028"
          />
          <li
            class="css-47028"
          />
          <li
            class="css-3ldhk3"
          />
        </ul>
      </div>
      <div
        class="mt-8"
      >
        <div
          data-testid="tab-pabel__active-panel"
        >
          <div
            class="flex flex-col"
            data-testid="ExchangeForm__status-step"
          >
            <div
              class="flex items-center space-x-1"
            >
              <span
                class="text-xs font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Transaction ID
                : 
                id
              </span>
              <span
                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
            <div
              class="mt-3 flex flex-col rounded-xl border border-theme-secondary-300 py-5 px-6 dark:border-theme-secondary-800"
            >
              <div
                class="flex flex-col space-y-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  You Send
                </span>
                <span
                  class="whitespace-nowrap text-lg font-semibold"
                  data-testid="Amount"
                >
                  1 BTC
                </span>
              </div>
              <div
                class="mt-4 flex flex-col space-y-2 border-t border-theme-secondary-300 pt-4 dark:border-theme-secondary-800"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  To Address
                </span>
                <div
                  class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
                >
                  <span
                    class="min-w-0 overflow-hidden no-ligatures"
                  >
                    payinAddress
                  </span>
                  <span
                    class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <button
                      class="ring-focus relative focus:outline-none"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg>
                          copy.svg
                        </svg>
                      </div>
                    </button>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="items-top my-6 flex justify-center px-10 sm:px-20"
            >
              <div
                class="flex w-8 flex-col items-center space-y-2"
              >
                <span
                  data-testid="StatusIcon__spinner"
                >
                  <div
                    class="css-i3nrbr"
                    color="info"
                  />
                </span>
                <span
                  class="whitespace-nowrap text-xs font-semibold sm:text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Awaiting Deposit
                </span>
              </div>
              <div
                class="flex h-8 flex-1 items-center px-2"
              >
                <div
                  class="h-0.5 w-full rounded-l rounded-r bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
              </div>
              <div
                class="flex w-8 flex-col items-center space-y-2"
              >
                <div
                  class="h-8 w-8 rounded-full border-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                  data-testid="StatusIcon__empty"
                />
                <span
                  class="whitespace-nowrap text-xs font-semibold sm:text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Exchanging
                </span>
              </div>
              <div
                class="flex h-8 flex-1 items-center px-2"
              >
                <div
                  class="h-0.5 w-full rounded-l rounded-r bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
              </div>
              <div
                class="flex w-8 flex-col items-center space-y-2"
              >
                <div
                  class="h-8 w-8 rounded-full border-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                  data-testid="StatusIcon__empty"
                />
                <span
                  class="whitespace-nowrap text-xs font-semibold sm:text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Sending
                </span>
              </div>
            </div>
            <div
              class="-mx-10 border-t border-dashed border-theme-secondary-300 px-10 pt-6 dark:border-theme-secondary-800"
            />
            <div
              class="flex flex-col space-y-4"
            >
              <div
                class="flex flex-col space-y-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  You Get
                </span>
                <span>
                  ≈
                   
                  <span
                    class="whitespace-nowrap font-semibold"
                    data-testid="Amount"
                  >
                    100 ARK
                  </span>
                </span>
              </div>
              <div
                class="flex flex-col space-y-2"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  To Address
                </span>
                <div
                  class="flex items-center space-x-2 whitespace-nowrap font-semibold"
                >
                  <span
                    class="min-w-0 overflow-hidden no-ligatures"
                  >
                    payoutAddress
                  </span>
                  <span
                    class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <button
                      class="ring-focus relative focus:outline-none"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg>
                          copy.svg
                        </svg>
                      </div>
                    </button>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="mt-6 rounded-lg bg-theme-secondary-100 py-3 px-6 text-sm dark:bg-theme-secondary-800"
            >
              If you have any question about your exchange, please contact ChangeNOW support team via email at 
              <a
                class="ring-focus group inline-block css-15tcy38"
                data-ring-focus-margin="-m-1"
                data-testid="Link"
                href="mailto:support@changenow.io"
                rel="noopener noreferrer"
              >
                <span
                  class="css-1y2194z"
                >
                  support@changenow.io
                </span>
                <div
                  class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
                  data-testid="Link__external"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FormStep should render 1`] = `
<div>
  <div
    class="flex flex-col"
    data-testid="ExchangeForm__form-step"
  >
    <div
      class="flex space-x-3"
    >
      <div
        class="w-2/5"
      >
        <fieldset
          class="flex flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="fromCurrency"
          >
            Cryptoasset
          </label>
          <div
            class="relative w-full"
            data-testid="SelectDropdown"
          >
            <div
              class="sr-only css-1psxlcd"
            >
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  autocomplete="off"
                  class="no-ligatures w-full border-none css-1nupw50"
                  data-testid="select-list__input"
                  name="fromCurrency"
                  readonly=""
                  tabindex="-1"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="w-full"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="fromCurrency-menu"
                role="combobox"
              >
                <div>
                  <label
                    for="fromCurrency-input"
                    id="fromCurrency-label"
                  />
                  <div
                    class="css-n29l73"
                    disabled=""
                  >
                    <span
                      class="hidden sm:inline"
                    >
                      <div
                        class="border-theme-secondary-200 bg-theme-secondary-200 ring-theme-background dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-459u9r"
                      />
                    </span>
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="fromCurrency-menu"
                        aria-labelledby="fromCurrency-label"
                        autocomplete="off"
                        class="no-ligatures w-full border-none cursor-default text-theme-secondary-text css-1nupw50"
                        data-testid="SelectDropdown__input"
                        disabled=""
                        id="fromCurrency-input"
                        name="fromCurrency"
                        placeholder="Select"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      data-testid="Input__addon-end"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="flex items-center justify-center py-2 px-1"
                            data-testid="SelectDropdown__caret"
                          >
                            <div
                              class="transition-transform text-theme-secondary-500 css-15txs7d"
                              height="10"
                              width="10"
                            >
                              <svg>
                                caret-down.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="fromCurrency-label"
                  id="fromCurrency-menu"
                  role="listbox"
                />
              </div>
            </div>
          </div>
        </fieldset>
      </div>
      <div
        class="w-3/5"
      >
        <fieldset
          class="flex flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="payinAmount"
          >
            You Send
          </label>
          <div
            class="relative"
          >
            <div
              class="css-1psxlcd"
            >
              <div
                class="relative flex h-full flex-1"
              >
                <input
                  autocomplete="off"
                  class="no-ligatures w-full border-none css-1nupw50"
                  data-testid="InputCurrency"
                  name="payinAmount"
                  placeholder="Enter an amount"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
    <div
      class="flex space-x-4 sm:ml-8 sm:space-x-8"
    >
      <div
        class="relative my-1 h-20 border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <div
          class="absolute top-1/2 h-2 w-2 -translate-x-1/2 -translate-y-1/2 rounded-full border border-theme-secondary-300 bg-theme-background dark:border-theme-secondary-800"
        />
      </div>
      <div
        class="flex flex-1 items-center"
      >
        <div
          class="flex flex-col space-y-2 text-sm sm:flex-row sm:items-center sm:space-x-2 sm:space-y-0"
        >
          <span
            class="mt-px border-b border-dashed border-theme-primary-600 font-semibold text-theme-primary-600"
          >
            Estimated Rate
            :
          </span>
          <span>
            N/A
          </span>
        </div>
        <button
          class="ml-auto css-j822yf"
          data-testid="ExchangeForm__swap-button"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg>
                arrow-down-up.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="space-y-6"
    >
      <div
        class="flex space-x-3"
      >
        <div
          class="w-2/5"
        >
          <fieldset
            class="flex flex-col css-1bcidjh"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="toCurrency"
            >
              Cryptoasset
            </label>
            <div
              class="relative w-full"
              data-testid="SelectDropdown"
            >
              <div
                class="sr-only css-1psxlcd"
              >
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    autocomplete="off"
                    class="no-ligatures w-full border-none css-1nupw50"
                    data-testid="select-list__input"
                    name="toCurrency"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="toCurrency-menu"
                  role="combobox"
                >
                  <div>
                    <label
                      for="toCurrency-input"
                      id="toCurrency-label"
                    />
                    <div
                      class="css-n29l73"
                      disabled=""
                    >
                      <span
                        class="hidden sm:inline"
                      >
                        <div
                          class="border-theme-secondary-200 bg-theme-secondary-200 ring-theme-background dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-459u9r"
                        />
                      </span>
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="toCurrency-menu"
                          aria-labelledby="toCurrency-label"
                          autocomplete="off"
                          class="no-ligatures w-full border-none cursor-default text-theme-secondary-text css-1nupw50"
                          data-testid="SelectDropdown__input"
                          disabled=""
                          id="toCurrency-input"
                          name="toCurrency"
                          placeholder="Select"
                          type="text"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                        data-testid="Input__addon-end"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center"
                          >
                            <div
                              class="flex items-center justify-center py-2 px-1"
                              data-testid="SelectDropdown__caret"
                            >
                              <div
                                class="transition-transform text-theme-secondary-500 css-15txs7d"
                                height="10"
                                width="10"
                              >
                                <svg>
                                  caret-down.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-labelledby="toCurrency-label"
                    id="toCurrency-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          class="w-3/5"
        >
          <fieldset
            class="flex flex-col css-1bcidjh"
          >
            <label
              class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
              data-testid="FormLabel"
              for="payoutAmount"
            >
              You Get
            </label>
            <div
              class="relative"
            >
              <div
                class="css-1psxlcd"
              >
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    autocomplete="off"
                    class="no-ligatures w-full border-none css-1nupw50"
                    data-testid="InputCurrency"
                    name="payoutAmount"
                    placeholder="Enter an amount"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </div>
      <div
        data-testid="ExchangeForm__recipient-address"
      >
        <fieldset
          class="flex flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="recipientWallet"
          >
            <div
              class="flex w-full justify-between"
            >
              Recipient Wallet
              <button
                class="link text-sm font-semibold"
                data-testid="ExchangeForm__add-refund-address"
                type="button"
              >
                +
                Add Refund Wallet
              </button>
            </div>
          </label>
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-1psxlcd"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1nupw50"
                      data-testid="select-list__input"
                      name="recipientWallet"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-n29l73"
                        disabled=""
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-459u9r"
                          />
                        </div>
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none cursor-default text-theme-secondary-text css-1nupw50"
                            data-testid="SelectDropdown__input"
                            disabled=""
                            id="SelectRecipient__dropdown-input"
                            name="recipientWallet"
                            placeholder="Enter the payout address"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`ReviewStep should render 1`] = `
<div>
  <div
    class="space-y-6"
    data-testid="ExchangeForm__review-step"
  >
    <div
      class="flex flex-col rounded-xl border border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="flex flex-col py-5 px-6"
      >
        <span
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          You Send
        </span>
        <span
          class="whitespace-nowrap text-lg font-semibold"
          data-testid="Amount"
        >
          1 BTC
        </span>
        <span
          class="text-xs font-semibold"
        >
          1 
          BTC
           ≈ 
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            NaN ARK
          </span>
        </span>
      </div>
      <div
        class="relative border-t border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <div
          class="absolute top-1/2 right-6 flex h-11 w-11 -translate-y-1/2 items-center justify-center rounded-full border border-theme-secondary-300 bg-theme-background dark:border-theme-secondary-800"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              money-coin-swap.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col py-5 px-6"
      >
        <span
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          You Get
        </span>
        <span
          class="whitespace-nowrap text-lg font-semibold"
          data-testid="Amount"
        >
          1 ARK
        </span>
        <span
          class="min-w-0 overflow-hidden no-ligatures text-xs font-semibold"
        >
          AYx3T2He3Ubz7H5pycQNG2Cvn6HYzeiC73
        </span>
      </div>
    </div>
    <fieldset
      class="flex flex-col css-1bcidjh"
    >
      <label
        class="flex cursor-pointer items-center space-x-3"
      >
        <input
          class="css-7i915u"
          color="success"
          name="hasAgreedToTerms"
          type="checkbox"
        />
        <span>
          I've read and agree to the ChangeNOW 
          <a
            class="ring-focus group inline-block css-15tcy38"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://changenow.io/terms-of-use"
            rel="noopener noreferrer"
          >
            <span
              class="css-1y2194z"
            >
              Terms of Use
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
           and 
          <a
            class="ring-focus group inline-block css-15tcy38"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="https://changenow.io/privacy-policy"
            rel="noopener noreferrer"
          >
            <span
              class="css-1y2194z"
            >
              Privacy Policy
            </span>
            <div
              class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
        </span>
      </label>
    </fieldset>
  </div>
</div>
`;

exports[`StatusStep should render 1`] = `
<div>
  <div
    class="flex flex-col"
    data-testid="ExchangeForm__status-step"
  >
    <div
      class="flex items-center space-x-1"
    >
      <span
        class="text-xs font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Transaction ID
        : 
        id
      </span>
      <span
        class="flex text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <button
          class="ring-focus relative focus:outline-none"
          data-ring-focus-margin="-m-1"
          data-testid="clipboard-icon__wrapper"
          type="button"
        >
          <div
            class="css-v0ob3f"
            height="16"
            width="16"
          >
            <svg>
              copy.svg
            </svg>
          </div>
        </button>
      </span>
    </div>
    <div
      class="mt-3 flex flex-col rounded-xl border border-theme-secondary-300 py-5 px-6 dark:border-theme-secondary-800"
    >
      <div
        class="flex flex-col space-y-2"
      >
        <span
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          You Send
        </span>
        <span
          class="whitespace-nowrap text-lg font-semibold"
          data-testid="Amount"
        >
          1 BTC
        </span>
      </div>
      <div
        class="mt-4 flex flex-col space-y-2 border-t border-theme-secondary-300 pt-4 dark:border-theme-secondary-800"
      >
        <span
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          To Address
        </span>
        <div
          class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
        >
          <span
            class="min-w-0 overflow-hidden no-ligatures"
          >
            payinAddress
          </span>
          <span
            class="flex text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  copy.svg
                </svg>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="items-top my-6 flex justify-center px-10 sm:px-20"
    >
      <div
        class="flex w-8 flex-col items-center space-y-2"
      >
        <span
          data-testid="StatusIcon__spinner"
        >
          <div
            class="css-i3nrbr"
            color="info"
          />
        </span>
        <span
          class="whitespace-nowrap text-xs font-semibold sm:text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Awaiting Deposit
        </span>
      </div>
      <div
        class="flex h-8 flex-1 items-center px-2"
      >
        <div
          class="h-0.5 w-full rounded-l rounded-r bg-theme-secondary-300 dark:bg-theme-secondary-800"
        />
      </div>
      <div
        class="flex w-8 flex-col items-center space-y-2"
      >
        <div
          class="h-8 w-8 rounded-full border-2 border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="StatusIcon__empty"
        />
        <span
          class="whitespace-nowrap text-xs font-semibold sm:text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Exchanging
        </span>
      </div>
      <div
        class="flex h-8 flex-1 items-center px-2"
      >
        <div
          class="h-0.5 w-full rounded-l rounded-r bg-theme-secondary-300 dark:bg-theme-secondary-800"
        />
      </div>
      <div
        class="flex w-8 flex-col items-center space-y-2"
      >
        <div
          class="h-8 w-8 rounded-full border-2 border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="StatusIcon__empty"
        />
        <span
          class="whitespace-nowrap text-xs font-semibold sm:text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Sending
        </span>
      </div>
    </div>
    <div
      class="-mx-10 border-t border-dashed border-theme-secondary-300 px-10 pt-6 dark:border-theme-secondary-800"
    />
    <div
      class="flex flex-col space-y-4"
    >
      <div
        class="flex flex-col space-y-2"
      >
        <span
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          You Get
        </span>
        <span>
          ≈
           
          <span
            class="whitespace-nowrap font-semibold"
            data-testid="Amount"
          >
            100 ARK
          </span>
        </span>
      </div>
      <div
        class="flex flex-col space-y-2"
      >
        <span
          class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          To Address
        </span>
        <div
          class="flex items-center space-x-2 whitespace-nowrap font-semibold"
        >
          <span
            class="min-w-0 overflow-hidden no-ligatures"
          >
            payoutAddress
          </span>
          <span
            class="flex text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  copy.svg
                </svg>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="mt-6 rounded-lg bg-theme-secondary-100 py-3 px-6 text-sm dark:bg-theme-secondary-800"
    >
      If you have any question about your exchange, please contact ChangeNOW support team via email at 
      <a
        class="ring-focus group inline-block css-15tcy38"
        data-ring-focus-margin="-m-1"
        data-testid="Link"
        href="mailto:support@changenow.io"
        rel="noopener noreferrer"
      >
        <span
          class="css-1y2194z"
        >
          support@changenow.io
        </span>
        <div
          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm css-v0ob3f"
          data-testid="Link__external"
          height="16"
          width="16"
        >
          <svg>
            arrow-external.svg
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;
